--- a/config/config.php.example
+++ b/config/config.php.example
@@ -33,12 +33,8 @@ $clock = "";
 $gmaps= "";
 
 //Webhook Setup
-$pokemon_webhook_url = ""; // <-- Webhook URL of your Pokemon Discord channel
-$raid_webhook_url = ""; // <-- Webhook URL of your Raid Discord channel
-$egg_webhook_url = ""; // <-- Webhook URL of your Egg Discord channel
-$quest_webhook_url = ""; // <-- Webhook URL of your Quest Discord channel
-$exraid_webhook_url = ""; // <-- Webhook URL of your Ex-Raid Discord channel
-$gym_webhook_url = ""; // <-- Webhook URL of your Gym Discord channel	
+$webhook_url = ""; // <-- Webhook URL of your Discord channel
+$viewurl = ""; // <-- Enter your FULL Spotamon url here including http:// or https:// example: https://www.mysite.com < NO BACKSLASH AT THE END!
 $viewtitle = ""; // <-- Text showing for the MAP-link @ Discord
 
 // MOTD POPUP
@@ -49,15 +45,21 @@ $motdtext = "";
 $motdimage = ""; // Set URL for custom popup-image
 $motdalways = false; // Always show MOTD, even when logged  in? -> Set to -> 'true'. Only when NOT logged in? Set to -> 'false'
 
+// Mail settings
+
+$showformlink = false; // Set to true or false to show feedback button in menu
+$mailhost = ""; // Hostname of SMTP
+$mailport = ""; // Port of SMTP
+$mailuser = ""; // Login of SMTP
+$mailpass = ""; // Password of SMTP
+$mailauthtype = ""; // 'ssl', 'tls', or ''
+$mailemail = ""; // Enter email where you wish to receive messages sent through form
+
+// Feedback mailform
+
+$feedbacksubject = ""; // Subject of the feedbackmail you will receive
+
 ///////////////////// DO NOT TOUCH \\\\\\\\\\\\\\\\\\\\\
-
-// Auto detect site url
-$protocol = (!empty($_SERVER['HTTPS']) && $_SERVER['HTTPS'] !== 'off' || $_SERVER['SERVER_PORT'] == 443) ? "https://" : "http://";
-$domainName = $_SERVER['HTTP_HOST'];
-$domain = $protocol.$domainName;
-$folder=(dirname($_SERVER['PHP_SELF']));
-$viewurl = $domain.$folder;
-
 // Create connection
 $conn = new mysqli($servername, $username, $password, $database);
 
@@ -121,21 +123,6 @@ type VARCHAR(25) NOT NULL,
 eggby VARCHAR(100) NOT NULL,
 teamby VARCHAR(100) NOT NULL,
 raidby VARCHAR(100) NOT NULL,
-exraid int(1) NOT NULL,
-exraiddate DATETIME NULL,
-date TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP)";
-
-$exraids = "CREATE TABLE IF NOT EXISTS `exraids` (
-exid INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
-gname INT(10) NOT NULL UNIQUE,
-exraiddate DATETIME NULL,
-spotter VARCHAR(255) NOT NULL,
-date TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP)";
-
-$exraidatt = "CREATE TABLE IF NOT EXISTS `exraidatt` (
-attid INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
-exid INT(10) NOT NULL,
-uid VARCHAR(255) NOT NULL,
 date TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP)";
 
 $teams = "CREATE TABLE IF NOT EXISTS `teams` (
@@ -182,10 +169,7 @@ $usergroup = "CREATE TABLE IF NOT EXISTS `usergroup` (
 id INT(10) PRIMARY KEY AUTO_INCREMENT NOT NULL,
 groupname VARCHAR(20) NOT NULL)";
 
-$version = "CREATE TABLE IF NOT EXISTS `version` (
-version INT(3) NOT NULL)";
-
-$tables = [$spot, $dex, $spotraid, $raidbosses, $gyms, $exraids, $exraidatt, $teams, $stops, $quests, $rewards, $users, $usergroup, $version];
+$tables = [$spot, $dex, $spotraid, $raidbosses, $gyms, $teams, $stops, $quests, $rewards, $users, $usergroup];
 
 foreach($tables as $k => $sql){
     $query = @$conn->query($sql);
